<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.davillarraga.calculator.MainActivity">


    <TextView
        android:text="@string/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/titulo"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="@dimen/titleSize"
        android:layout_weight="1"/>


    <TextView
        android:id="@+id/lastStep"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="right"
        android:textColor="@color/white"
        android:text="" />

    <TextView
        android:text=""
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/result"
        android:gravity="right"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="@android:dimen/app_icon_size"
        android:layout_weight="1"/>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <Button
            android:text="@string/potency2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:onClick="potency2"
            android:id="@+id/intoTwo"
            android:layout_weight="0.31" />

        <Button
            android:text="@string/potencyY"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:onClick="potencyY"
            android:id="@+id/intoY"
            android:layout_weight="0.35" />
        <Button
            android:text="@string/inverse"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:onClick="inverse"
            android:id="@+id/oneOverX"
            android:layout_weight="0.35" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout"
        android:layout_weight="1">

        <Button
            android:text="@string/sin"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:onClick="sin"
            android:id="@+id/button_sin"
            android:layout_weight="1" />

        <Button
            android:text="@string/cos"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:onClick="cos"
            android:id="@+id/button_cos"
            android:layout_weight="1" />

        <Button
            android:text="@string/tan"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:onClick="tan"
            android:id="@+id/button_tan"
            android:layout_weight="1" />


    </LinearLayout>

    <LinearLayout

        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout1"
        android:layout_weight="1">

        <Button
            android:text="@string/n7"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/button_seven" />
        <Button
            android:text="@string/n8"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/button_eight" />
        <Button
            android:text="@string/n9"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/button_nine"
            />
        <Button
            android:text="@string/division"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:onClick="division"
            android:layout_weight="1"
            android:id="@+id/button_division"
            />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout2"
        android:layout_weight="1">


        <Button
            android:text="@string/n4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/button_four"
            android:layout_weight="1"/>
        <Button
            android:text="@string/n5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/button_five"
            android:layout_weight="1"/>
        <Button
            android:text="@string/n6"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/button_six"
            android:layout_weight="1"
            />
        <Button
            android:text="@string/multiplication"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:onClick="multiplication"
            android:id="@+id/button_multiplicacion"
            android:layout_weight="1"
            />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout3"
        android:layout_weight="1">

        <Button
            android:text="@string/n1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/button_one" />
        <Button
            android:text="@string/n2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/button_two" />
        <Button
            android:text="@string/n3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/button_three"
            android:layout_weight="1"
            />

        <Button
            android:text="@string/subtraction"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:onClick="substract"
            android:id="@+id/button_menos"
            android:layout_weight="1"
            />


    </LinearLayout>

    <LinearLayout

        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <Button
            android:text="@string/n0"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/button_cero"
            android:layout_weight="0.31" />

        <Button
            android:text="@string/point"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/button_point"
            android:layout_weight="0.31" />

        <Button
            android:text="@string/sum"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:onClick="sum"
            android:id="@+id/button_suma"
            android:layout_weight="0.31" />



    </LinearLayout>



    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">


        <Button
            android:text="@string/changeOfSign"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:onClick="changeOfSign"
            android:id="@+id/button_mix"
            android:layout_weight="0.31" />

        <Button
            android:text="@string/clear"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:onClick="clear"
            android:id="@+id/button_AC"
            android:layout_weight="0.35" />

    </LinearLayout>


</LinearLayout>
